# TheRaytracer

./: .directory  README.md
Scenes/: ShinyCow.json  TestSpheres.json  niceScene.json
src/: CMakeLists.txt  Makefile  main.cpp
src/Entity/: Camera.cpp  Camera.hpp  LightSource.hpp  Object.cpp  Object.hpp
src/Material/: Material.cpp  Material.hpp
src/Math/: AffineTransform.cpp  AffineTransform.hpp  Ray.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp
src/Util/: Epsilon.hpp  RayCaster.cpp  RayCaster.hpp
